hphp/test/slow/rx/is_enabled_bad2.php.expectf
Fatal error: Undefined constant 'HH\Rx\IS_ENABLED' in %s/test/slow/rx/is_enabled_bad2.php on line 5
